# tauri-wasm-copy

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-tool.js  build.js  package.json
example/: package.json  pnpm-lock.yaml
example/src-tauri/: Cargo.toml  tauri.conf.json
src/: js.rs  lib.rs
src/api/: app.rs  core.rs
src/scripts/plugins/: autostart.js  barcode-scanner.js  biometric.js  cli.js  clipboard-manager.js  deep-link.js  dialog.js  fs.js  geolocation.js  global-shortcut.js  haptics.js  http.js  log.js  nfc.js  notification.js  opener.js  os.js  positioner.js  process.js  shell.js  sql.js  store.js  stronghold.js  updater.js  upload.js  websocket.js  window-state.js
