[package]
name= "tauri-wasm-copy"
version = "0.1.0"
edition = "2024"



[features]
# Api
all = ["app"]
app = []
core= []




[dependencies]
js-sys = "0.3.77"
serde = "1.0.219"
serde_repr = "0.1.20"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
thiserror = "1.0.69"
futures = { version = "0.3.30", optional = true }
url = {version = "2.5.4", optional = true, features = ["serde"]}
semver = {version = "1.0.26", optional = true, features = ["serde"]}